; ModuleID = '/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_spu_channel_Clear.c'
source_filename = "/home/carl/AnghaBench/vlc/src/video_output/extr_vout_subpictures.c_spu_channel_Clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spu_channel = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.spu_channel*)* @spu_channel_Clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spu_channel_Clear(i32* %0, %struct.spu_channel* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.spu_channel*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store %struct.spu_channel* %1, %struct.spu_channel** %4, align 8
  store i64 0, i64* %5, align 8
  br label %6

6:                                                ; preds = %27, %2
  %7 = load i64, i64* %5, align 8
  %8 = load %struct.spu_channel*, %struct.spu_channel** %4, align 8
  %9 = getelementptr inbounds %struct.spu_channel, %struct.spu_channel* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ult i64 %7, %11
  br i1 %12, label %13, label %30

13:                                               ; preds = %6
  %14 = load i32*, i32** %3, align 8
  %15 = load %struct.spu_channel*, %struct.spu_channel** %4, align 8
  %16 = getelementptr inbounds %struct.spu_channel, %struct.spu_channel* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %17, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @spu_PrerenderCancel(i32* %14, i32 %22)
  %24 = load %struct.spu_channel*, %struct.spu_channel** %4, align 8
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @spu_channel_DeleteAt(%struct.spu_channel* %24, i64 %25)
  br label %27

27:                                               ; preds = %13
  %28 = load i64, i64* %5, align 8
  %29 = add i64 %28, 1
  store i64 %29, i64* %5, align 8
  br label %6

30:                                               ; preds = %6
  ret void
}

declare dso_local i32 @spu_PrerenderCancel(i32*, i32) #1

declare dso_local i32 @spu_channel_DeleteAt(%struct.spu_channel*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
